--- a/TODO
+++ b/TODO
@@ -21,7 +21,9 @@
   rowMeans2, rowSums2, rowRanks, rowQuantiles, rowMads, rowIQRs, rowAlls,
   rowCumsums, rowWeightedMeans, rowAnyNAs) + corresponding col* methods.
 
-- Implement Ops methods (Arith, Compare, Logic) for SVT_SparseArray objects.
+- Implement unary plus and minus for SVT_SparseArray objects.
+
+- Implement Compare and Logic methods for SVT_SparseArray objects.
 
 - Implement Math2 methods and **some** Math methods (only those that
   preserve sparsity that is: abs, sign, sqrt, ceiling, floor, trunc, log1p,
