--- a/TODO
+++ b/TODO
@@ -1,3 +1,18 @@
+- Extend the capabililties of the SVT_SparseArray() and SparseArray()
+  constructors so that they can be used to create a SVT_SparseArray object
+  with the specified dimensions and only zeros (i.e. no nonzero data).
+
+- Implement dim() setter that supports adding or dropping "ineffective"
+  dimensions (i.e. dimensions equal to 1, so adding or dropping them
+  preserves the length of the object). See dim() setter in the DelayedArray
+  package (in R/DelayedArray-class.R) for an example.
+
+- Subassignments like this need to work:
+    svt[ , , 1] <- svt[ , , 3, drop=FALSE]
+    svt[ , , 1] <- svt[ , , 3]
+  See Shila Ghazanfar's use case in the #tech-advisory-board channel on the
+  community Slack for some context.
+
 - Try to speed up SVT_SparseArray transposition by implementing a one-pass
   approach that uses ExtendableJaggedArray intermediate buffers (offss, valss).
   See src/readSparseCSV.c where this approach is already used.
