SparseArray 1.0.8: Add aperm() method for SVT_SparseArray objects
The aperm() method for SVT_SparseArray objects is currently restricted to
permutations that transpose the **leftmost dimensions** (a.k.a. innermost
or fastest moving dimensions in the memory layout). In other words, it only
supports a 'perm' argument that is identical to 'c(r:1, (r+1):ndim)',
where 'r' is the "perm rank". See src/SparseArray_aperm.c for the details.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,3 @@
-- Implement aperm() method for SVT_SparseArray objects.
-
 - To support Shila's use case (see #tech-advisory-board channel on
   community Slack):
 
@@ -86,6 +84,13 @@
   3. Revisit implementation of C_readSparseCSV_as_SVT_SparseMatrix(): Try to
      use an SBT instead of an ExtendableJaggedArray. Performance should not
      be impacted. Then we can get rid of the ExtendableJaggedArray thing.
+
+- aperm() for SVT_SparseArray objects should suport **any** permutation.
+  At the moment it's restricted to permutations that transpose the **leftmost
+  dimensions** (a.k.a. innermost or fastest moving dimensions in the memory
+  layout). In other words, it only supports a 'perm' that is identical
+  to 'c(r:1, (r+1):ndim)', where 'r' is the "perm rank".
+  See src/SparseArray_aperm.c for the details.
 
 - Define apply() and asplit() methods for SparseArray objects that fail with
   a friendly error message. Otherwise base::apply() or base::asplit() get
