--- a/TODO
+++ b/TODO
@@ -85,6 +85,9 @@
      use an SBT instead of an ExtendableJaggedArray. Performance should not
      be impacted. Then we can get rid of the ExtendableJaggedArray thing.
 
+- Implement which() for SVT_SparseArray objects (use C function
+  _extract_nzcoo_from_SVT() for the 'arr.ind=TRUE' case).
+
 - Improve readSparseCSV() functionality by adding a few read.table-like args
   to it. See https://github.com/Bioconductor/SparseArray/issues/5 for the
   details.
